# orderbookEngine

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
bench/: CMakeLists.txt  bench_order_book.cpp  bench_spsc_ring.cpp
docs/: NEXT_STEPS.md
include/lob/: bitmap.hpp  clock.hpp  compiler.hpp  histogram.hpp  intrusive_list.hpp  itch.hpp  mapped_file.hpp  order.hpp  order_book.hpp  order_id_map.hpp  price_level.hpp  slab_allocator.hpp  spsc_ring.hpp  types.hpp
scripts/: download_itch_sample.sh  flamegraph.sh  plot_latency.py
src/: itch_parser.cpp  lob_instantiate.cpp  replay.cpp
tests/: CMakeLists.txt  test_bitmap.cpp  test_intrusive_list.cpp  test_itch_parser.cpp  test_matching.cpp  test_order_book.cpp  test_order_id_map.cpp  test_slab_allocator.cpp  test_spsc_ring.cpp  test_tif.cpp
